@@ -3,6 +3,7 @@ Changes for 3.4.9rc1
 New features:
 
 Bug fixes:
+A.F....... [ZBX-13742] fixed parsing of the operator "not" in trigger expression (Sasha)
 .........T [ZBX-13535] fixed trigger recovery expression for 'High error rate' trigger (vitaly)
 .........T [ZBX-13278] fixed trigger expression for 'Link down' trigger (vitaly)
 ...G...... [ZBX-12805] increased command line limit for proc.num checks on hp-ux systems (Andris, wiper)
